--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "express": "^4.16.3",
     "liff": "^1.1.1",
     "vue": "^2.5.17",
