--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "connect-history-api-fallback": "^1.6.0",
     "express": "^4.16.3",
     "liff": "^1.1.1",
     "vue": "^2.5.17",
